Analizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> lexico
Rule 2     lexico -> lexico comandos
Rule 3     lexico -> comandos
Rule 4     comandos -> maincomando subcomando
Rule 5     comandos -> maincomando
Rule 6     maincomando -> CONFIGURE
Rule 7     maincomando -> CREATE
Rule 8     maincomando -> DELETE
Rule 9     maincomando -> COPY
Rule 10    maincomando -> TRANSFER
Rule 11    maincomando -> RENAME
Rule 12    maincomando -> MODIFY
Rule 13    maincomando -> ADD
Rule 14    maincomando -> BACKUP
Rule 15    maincomando -> EXEC
Rule 16    subcomando -> subcomando sub
Rule 17    subcomando -> sub
Rule 18    sub -> TYPE tipo
Rule 19    sub -> ENCRYPTLOG encriptado
Rule 20    sub -> ENCRYPTREAD encriptado
Rule 21    sub -> LLAVE STRING
Rule 22    sub -> NAME name
Rule 23    sub -> BODY STRING
Rule 24    sub -> PATH RUTA
Rule 25    sub -> FROM RUTA
Rule 26    sub -> TO RUTA
Rule 27    sub -> MODE tipo
Rule 28    tipo -> LOCAL
Rule 29    tipo -> CLOUD
Rule 30    encriptado -> TRUE
Rule 31    encriptado -> FALSE
Rule 32    name -> RUTA
Rule 33    name -> STRING
Rule 34    name -> ARCHIVO

Terminals, with rules where they appear

ADD                  : 13
ARCHIVO              : 34
BACKUP               : 14
BODY                 : 23
CLOUD                : 29
CONFIGURE            : 6
COPY                 : 9
CREATE               : 7
DELETE               : 8
ENCRYPTLOG           : 19
ENCRYPTREAD          : 20
EXEC                 : 15
FALSE                : 31
FROM                 : 25
LLAVE                : 21
LOCAL                : 28
MODE                 : 27
MODIFY               : 12
NAME                 : 22
PATH                 : 24
RENAME               : 11
RUTA                 : 24 25 26 32
STRING               : 21 23 33
TO                   : 26
TRANSFER             : 10
TRUE                 : 30
TYPE                 : 18
error                : 

Nonterminals, with rules where they appear

comandos             : 2 3
encriptado           : 19 20
inicio               : 0
lexico               : 1 2
maincomando          : 4 5
name                 : 22
sub                  : 16 17
subcomando           : 4 16
tipo                 : 18 27

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . lexico
    (2) lexico -> . lexico comandos
    (3) lexico -> . comandos
    (4) comandos -> . maincomando subcomando
    (5) comandos -> . maincomando
    (6) maincomando -> . CONFIGURE
    (7) maincomando -> . CREATE
    (8) maincomando -> . DELETE
    (9) maincomando -> . COPY
    (10) maincomando -> . TRANSFER
    (11) maincomando -> . RENAME
    (12) maincomando -> . MODIFY
    (13) maincomando -> . ADD
    (14) maincomando -> . BACKUP
    (15) maincomando -> . EXEC

    CONFIGURE       shift and go to state 5
    CREATE          shift and go to state 6
    DELETE          shift and go to state 7
    COPY            shift and go to state 8
    TRANSFER        shift and go to state 9
    RENAME          shift and go to state 10
    MODIFY          shift and go to state 11
    ADD             shift and go to state 12
    BACKUP          shift and go to state 13
    EXEC            shift and go to state 14

    inicio                         shift and go to state 1
    lexico                         shift and go to state 2
    comandos                       shift and go to state 3
    maincomando                    shift and go to state 4

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> lexico .
    (2) lexico -> lexico . comandos
    (4) comandos -> . maincomando subcomando
    (5) comandos -> . maincomando
    (6) maincomando -> . CONFIGURE
    (7) maincomando -> . CREATE
    (8) maincomando -> . DELETE
    (9) maincomando -> . COPY
    (10) maincomando -> . TRANSFER
    (11) maincomando -> . RENAME
    (12) maincomando -> . MODIFY
    (13) maincomando -> . ADD
    (14) maincomando -> . BACKUP
    (15) maincomando -> . EXEC

    $end            reduce using rule 1 (inicio -> lexico .)
    CONFIGURE       shift and go to state 5
    CREATE          shift and go to state 6
    DELETE          shift and go to state 7
    COPY            shift and go to state 8
    TRANSFER        shift and go to state 9
    RENAME          shift and go to state 10
    MODIFY          shift and go to state 11
    ADD             shift and go to state 12
    BACKUP          shift and go to state 13
    EXEC            shift and go to state 14

    comandos                       shift and go to state 15
    maincomando                    shift and go to state 4

state 3

    (3) lexico -> comandos .

    CONFIGURE       reduce using rule 3 (lexico -> comandos .)
    CREATE          reduce using rule 3 (lexico -> comandos .)
    DELETE          reduce using rule 3 (lexico -> comandos .)
    COPY            reduce using rule 3 (lexico -> comandos .)
    TRANSFER        reduce using rule 3 (lexico -> comandos .)
    RENAME          reduce using rule 3 (lexico -> comandos .)
    MODIFY          reduce using rule 3 (lexico -> comandos .)
    ADD             reduce using rule 3 (lexico -> comandos .)
    BACKUP          reduce using rule 3 (lexico -> comandos .)
    EXEC            reduce using rule 3 (lexico -> comandos .)
    $end            reduce using rule 3 (lexico -> comandos .)


state 4

    (4) comandos -> maincomando . subcomando
    (5) comandos -> maincomando .
    (16) subcomando -> . subcomando sub
    (17) subcomando -> . sub
    (18) sub -> . TYPE tipo
    (19) sub -> . ENCRYPTLOG encriptado
    (20) sub -> . ENCRYPTREAD encriptado
    (21) sub -> . LLAVE STRING
    (22) sub -> . NAME name
    (23) sub -> . BODY STRING
    (24) sub -> . PATH RUTA
    (25) sub -> . FROM RUTA
    (26) sub -> . TO RUTA
    (27) sub -> . MODE tipo

    CONFIGURE       reduce using rule 5 (comandos -> maincomando .)
    CREATE          reduce using rule 5 (comandos -> maincomando .)
    DELETE          reduce using rule 5 (comandos -> maincomando .)
    COPY            reduce using rule 5 (comandos -> maincomando .)
    TRANSFER        reduce using rule 5 (comandos -> maincomando .)
    RENAME          reduce using rule 5 (comandos -> maincomando .)
    MODIFY          reduce using rule 5 (comandos -> maincomando .)
    ADD             reduce using rule 5 (comandos -> maincomando .)
    BACKUP          reduce using rule 5 (comandos -> maincomando .)
    EXEC            reduce using rule 5 (comandos -> maincomando .)
    $end            reduce using rule 5 (comandos -> maincomando .)
    TYPE            shift and go to state 18
    ENCRYPTLOG      shift and go to state 19
    ENCRYPTREAD     shift and go to state 20
    LLAVE           shift and go to state 21
    NAME            shift and go to state 22
    BODY            shift and go to state 23
    PATH            shift and go to state 24
    FROM            shift and go to state 25
    TO              shift and go to state 26
    MODE            shift and go to state 27

    subcomando                     shift and go to state 16
    sub                            shift and go to state 17

state 5

    (6) maincomando -> CONFIGURE .

    TYPE            reduce using rule 6 (maincomando -> CONFIGURE .)
    ENCRYPTLOG      reduce using rule 6 (maincomando -> CONFIGURE .)
    ENCRYPTREAD     reduce using rule 6 (maincomando -> CONFIGURE .)
    LLAVE           reduce using rule 6 (maincomando -> CONFIGURE .)
    NAME            reduce using rule 6 (maincomando -> CONFIGURE .)
    BODY            reduce using rule 6 (maincomando -> CONFIGURE .)
    PATH            reduce using rule 6 (maincomando -> CONFIGURE .)
    FROM            reduce using rule 6 (maincomando -> CONFIGURE .)
    TO              reduce using rule 6 (maincomando -> CONFIGURE .)
    MODE            reduce using rule 6 (maincomando -> CONFIGURE .)
    CONFIGURE       reduce using rule 6 (maincomando -> CONFIGURE .)
    CREATE          reduce using rule 6 (maincomando -> CONFIGURE .)
    DELETE          reduce using rule 6 (maincomando -> CONFIGURE .)
    COPY            reduce using rule 6 (maincomando -> CONFIGURE .)
    TRANSFER        reduce using rule 6 (maincomando -> CONFIGURE .)
    RENAME          reduce using rule 6 (maincomando -> CONFIGURE .)
    MODIFY          reduce using rule 6 (maincomando -> CONFIGURE .)
    ADD             reduce using rule 6 (maincomando -> CONFIGURE .)
    BACKUP          reduce using rule 6 (maincomando -> CONFIGURE .)
    EXEC            reduce using rule 6 (maincomando -> CONFIGURE .)
    $end            reduce using rule 6 (maincomando -> CONFIGURE .)


state 6

    (7) maincomando -> CREATE .

    TYPE            reduce using rule 7 (maincomando -> CREATE .)
    ENCRYPTLOG      reduce using rule 7 (maincomando -> CREATE .)
    ENCRYPTREAD     reduce using rule 7 (maincomando -> CREATE .)
    LLAVE           reduce using rule 7 (maincomando -> CREATE .)
    NAME            reduce using rule 7 (maincomando -> CREATE .)
    BODY            reduce using rule 7 (maincomando -> CREATE .)
    PATH            reduce using rule 7 (maincomando -> CREATE .)
    FROM            reduce using rule 7 (maincomando -> CREATE .)
    TO              reduce using rule 7 (maincomando -> CREATE .)
    MODE            reduce using rule 7 (maincomando -> CREATE .)
    CONFIGURE       reduce using rule 7 (maincomando -> CREATE .)
    CREATE          reduce using rule 7 (maincomando -> CREATE .)
    DELETE          reduce using rule 7 (maincomando -> CREATE .)
    COPY            reduce using rule 7 (maincomando -> CREATE .)
    TRANSFER        reduce using rule 7 (maincomando -> CREATE .)
    RENAME          reduce using rule 7 (maincomando -> CREATE .)
    MODIFY          reduce using rule 7 (maincomando -> CREATE .)
    ADD             reduce using rule 7 (maincomando -> CREATE .)
    BACKUP          reduce using rule 7 (maincomando -> CREATE .)
    EXEC            reduce using rule 7 (maincomando -> CREATE .)
    $end            reduce using rule 7 (maincomando -> CREATE .)


state 7

    (8) maincomando -> DELETE .

    TYPE            reduce using rule 8 (maincomando -> DELETE .)
    ENCRYPTLOG      reduce using rule 8 (maincomando -> DELETE .)
    ENCRYPTREAD     reduce using rule 8 (maincomando -> DELETE .)
    LLAVE           reduce using rule 8 (maincomando -> DELETE .)
    NAME            reduce using rule 8 (maincomando -> DELETE .)
    BODY            reduce using rule 8 (maincomando -> DELETE .)
    PATH            reduce using rule 8 (maincomando -> DELETE .)
    FROM            reduce using rule 8 (maincomando -> DELETE .)
    TO              reduce using rule 8 (maincomando -> DELETE .)
    MODE            reduce using rule 8 (maincomando -> DELETE .)
    CONFIGURE       reduce using rule 8 (maincomando -> DELETE .)
    CREATE          reduce using rule 8 (maincomando -> DELETE .)
    DELETE          reduce using rule 8 (maincomando -> DELETE .)
    COPY            reduce using rule 8 (maincomando -> DELETE .)
    TRANSFER        reduce using rule 8 (maincomando -> DELETE .)
    RENAME          reduce using rule 8 (maincomando -> DELETE .)
    MODIFY          reduce using rule 8 (maincomando -> DELETE .)
    ADD             reduce using rule 8 (maincomando -> DELETE .)
    BACKUP          reduce using rule 8 (maincomando -> DELETE .)
    EXEC            reduce using rule 8 (maincomando -> DELETE .)
    $end            reduce using rule 8 (maincomando -> DELETE .)


state 8

    (9) maincomando -> COPY .

    TYPE            reduce using rule 9 (maincomando -> COPY .)
    ENCRYPTLOG      reduce using rule 9 (maincomando -> COPY .)
    ENCRYPTREAD     reduce using rule 9 (maincomando -> COPY .)
    LLAVE           reduce using rule 9 (maincomando -> COPY .)
    NAME            reduce using rule 9 (maincomando -> COPY .)
    BODY            reduce using rule 9 (maincomando -> COPY .)
    PATH            reduce using rule 9 (maincomando -> COPY .)
    FROM            reduce using rule 9 (maincomando -> COPY .)
    TO              reduce using rule 9 (maincomando -> COPY .)
    MODE            reduce using rule 9 (maincomando -> COPY .)
    CONFIGURE       reduce using rule 9 (maincomando -> COPY .)
    CREATE          reduce using rule 9 (maincomando -> COPY .)
    DELETE          reduce using rule 9 (maincomando -> COPY .)
    COPY            reduce using rule 9 (maincomando -> COPY .)
    TRANSFER        reduce using rule 9 (maincomando -> COPY .)
    RENAME          reduce using rule 9 (maincomando -> COPY .)
    MODIFY          reduce using rule 9 (maincomando -> COPY .)
    ADD             reduce using rule 9 (maincomando -> COPY .)
    BACKUP          reduce using rule 9 (maincomando -> COPY .)
    EXEC            reduce using rule 9 (maincomando -> COPY .)
    $end            reduce using rule 9 (maincomando -> COPY .)


state 9

    (10) maincomando -> TRANSFER .

    TYPE            reduce using rule 10 (maincomando -> TRANSFER .)
    ENCRYPTLOG      reduce using rule 10 (maincomando -> TRANSFER .)
    ENCRYPTREAD     reduce using rule 10 (maincomando -> TRANSFER .)
    LLAVE           reduce using rule 10 (maincomando -> TRANSFER .)
    NAME            reduce using rule 10 (maincomando -> TRANSFER .)
    BODY            reduce using rule 10 (maincomando -> TRANSFER .)
    PATH            reduce using rule 10 (maincomando -> TRANSFER .)
    FROM            reduce using rule 10 (maincomando -> TRANSFER .)
    TO              reduce using rule 10 (maincomando -> TRANSFER .)
    MODE            reduce using rule 10 (maincomando -> TRANSFER .)
    CONFIGURE       reduce using rule 10 (maincomando -> TRANSFER .)
    CREATE          reduce using rule 10 (maincomando -> TRANSFER .)
    DELETE          reduce using rule 10 (maincomando -> TRANSFER .)
    COPY            reduce using rule 10 (maincomando -> TRANSFER .)
    TRANSFER        reduce using rule 10 (maincomando -> TRANSFER .)
    RENAME          reduce using rule 10 (maincomando -> TRANSFER .)
    MODIFY          reduce using rule 10 (maincomando -> TRANSFER .)
    ADD             reduce using rule 10 (maincomando -> TRANSFER .)
    BACKUP          reduce using rule 10 (maincomando -> TRANSFER .)
    EXEC            reduce using rule 10 (maincomando -> TRANSFER .)
    $end            reduce using rule 10 (maincomando -> TRANSFER .)


state 10

    (11) maincomando -> RENAME .

    TYPE            reduce using rule 11 (maincomando -> RENAME .)
    ENCRYPTLOG      reduce using rule 11 (maincomando -> RENAME .)
    ENCRYPTREAD     reduce using rule 11 (maincomando -> RENAME .)
    LLAVE           reduce using rule 11 (maincomando -> RENAME .)
    NAME            reduce using rule 11 (maincomando -> RENAME .)
    BODY            reduce using rule 11 (maincomando -> RENAME .)
    PATH            reduce using rule 11 (maincomando -> RENAME .)
    FROM            reduce using rule 11 (maincomando -> RENAME .)
    TO              reduce using rule 11 (maincomando -> RENAME .)
    MODE            reduce using rule 11 (maincomando -> RENAME .)
    CONFIGURE       reduce using rule 11 (maincomando -> RENAME .)
    CREATE          reduce using rule 11 (maincomando -> RENAME .)
    DELETE          reduce using rule 11 (maincomando -> RENAME .)
    COPY            reduce using rule 11 (maincomando -> RENAME .)
    TRANSFER        reduce using rule 11 (maincomando -> RENAME .)
    RENAME          reduce using rule 11 (maincomando -> RENAME .)
    MODIFY          reduce using rule 11 (maincomando -> RENAME .)
    ADD             reduce using rule 11 (maincomando -> RENAME .)
    BACKUP          reduce using rule 11 (maincomando -> RENAME .)
    EXEC            reduce using rule 11 (maincomando -> RENAME .)
    $end            reduce using rule 11 (maincomando -> RENAME .)


state 11

    (12) maincomando -> MODIFY .

    TYPE            reduce using rule 12 (maincomando -> MODIFY .)
    ENCRYPTLOG      reduce using rule 12 (maincomando -> MODIFY .)
    ENCRYPTREAD     reduce using rule 12 (maincomando -> MODIFY .)
    LLAVE           reduce using rule 12 (maincomando -> MODIFY .)
    NAME            reduce using rule 12 (maincomando -> MODIFY .)
    BODY            reduce using rule 12 (maincomando -> MODIFY .)
    PATH            reduce using rule 12 (maincomando -> MODIFY .)
    FROM            reduce using rule 12 (maincomando -> MODIFY .)
    TO              reduce using rule 12 (maincomando -> MODIFY .)
    MODE            reduce using rule 12 (maincomando -> MODIFY .)
    CONFIGURE       reduce using rule 12 (maincomando -> MODIFY .)
    CREATE          reduce using rule 12 (maincomando -> MODIFY .)
    DELETE          reduce using rule 12 (maincomando -> MODIFY .)
    COPY            reduce using rule 12 (maincomando -> MODIFY .)
    TRANSFER        reduce using rule 12 (maincomando -> MODIFY .)
    RENAME          reduce using rule 12 (maincomando -> MODIFY .)
    MODIFY          reduce using rule 12 (maincomando -> MODIFY .)
    ADD             reduce using rule 12 (maincomando -> MODIFY .)
    BACKUP          reduce using rule 12 (maincomando -> MODIFY .)
    EXEC            reduce using rule 12 (maincomando -> MODIFY .)
    $end            reduce using rule 12 (maincomando -> MODIFY .)


state 12

    (13) maincomando -> ADD .

    TYPE            reduce using rule 13 (maincomando -> ADD .)
    ENCRYPTLOG      reduce using rule 13 (maincomando -> ADD .)
    ENCRYPTREAD     reduce using rule 13 (maincomando -> ADD .)
    LLAVE           reduce using rule 13 (maincomando -> ADD .)
    NAME            reduce using rule 13 (maincomando -> ADD .)
    BODY            reduce using rule 13 (maincomando -> ADD .)
    PATH            reduce using rule 13 (maincomando -> ADD .)
    FROM            reduce using rule 13 (maincomando -> ADD .)
    TO              reduce using rule 13 (maincomando -> ADD .)
    MODE            reduce using rule 13 (maincomando -> ADD .)
    CONFIGURE       reduce using rule 13 (maincomando -> ADD .)
    CREATE          reduce using rule 13 (maincomando -> ADD .)
    DELETE          reduce using rule 13 (maincomando -> ADD .)
    COPY            reduce using rule 13 (maincomando -> ADD .)
    TRANSFER        reduce using rule 13 (maincomando -> ADD .)
    RENAME          reduce using rule 13 (maincomando -> ADD .)
    MODIFY          reduce using rule 13 (maincomando -> ADD .)
    ADD             reduce using rule 13 (maincomando -> ADD .)
    BACKUP          reduce using rule 13 (maincomando -> ADD .)
    EXEC            reduce using rule 13 (maincomando -> ADD .)
    $end            reduce using rule 13 (maincomando -> ADD .)


state 13

    (14) maincomando -> BACKUP .

    TYPE            reduce using rule 14 (maincomando -> BACKUP .)
    ENCRYPTLOG      reduce using rule 14 (maincomando -> BACKUP .)
    ENCRYPTREAD     reduce using rule 14 (maincomando -> BACKUP .)
    LLAVE           reduce using rule 14 (maincomando -> BACKUP .)
    NAME            reduce using rule 14 (maincomando -> BACKUP .)
    BODY            reduce using rule 14 (maincomando -> BACKUP .)
    PATH            reduce using rule 14 (maincomando -> BACKUP .)
    FROM            reduce using rule 14 (maincomando -> BACKUP .)
    TO              reduce using rule 14 (maincomando -> BACKUP .)
    MODE            reduce using rule 14 (maincomando -> BACKUP .)
    CONFIGURE       reduce using rule 14 (maincomando -> BACKUP .)
    CREATE          reduce using rule 14 (maincomando -> BACKUP .)
    DELETE          reduce using rule 14 (maincomando -> BACKUP .)
    COPY            reduce using rule 14 (maincomando -> BACKUP .)
    TRANSFER        reduce using rule 14 (maincomando -> BACKUP .)
    RENAME          reduce using rule 14 (maincomando -> BACKUP .)
    MODIFY          reduce using rule 14 (maincomando -> BACKUP .)
    ADD             reduce using rule 14 (maincomando -> BACKUP .)
    BACKUP          reduce using rule 14 (maincomando -> BACKUP .)
    EXEC            reduce using rule 14 (maincomando -> BACKUP .)
    $end            reduce using rule 14 (maincomando -> BACKUP .)


state 14

    (15) maincomando -> EXEC .

    TYPE            reduce using rule 15 (maincomando -> EXEC .)
    ENCRYPTLOG      reduce using rule 15 (maincomando -> EXEC .)
    ENCRYPTREAD     reduce using rule 15 (maincomando -> EXEC .)
    LLAVE           reduce using rule 15 (maincomando -> EXEC .)
    NAME            reduce using rule 15 (maincomando -> EXEC .)
    BODY            reduce using rule 15 (maincomando -> EXEC .)
    PATH            reduce using rule 15 (maincomando -> EXEC .)
    FROM            reduce using rule 15 (maincomando -> EXEC .)
    TO              reduce using rule 15 (maincomando -> EXEC .)
    MODE            reduce using rule 15 (maincomando -> EXEC .)
    CONFIGURE       reduce using rule 15 (maincomando -> EXEC .)
    CREATE          reduce using rule 15 (maincomando -> EXEC .)
    DELETE          reduce using rule 15 (maincomando -> EXEC .)
    COPY            reduce using rule 15 (maincomando -> EXEC .)
    TRANSFER        reduce using rule 15 (maincomando -> EXEC .)
    RENAME          reduce using rule 15 (maincomando -> EXEC .)
    MODIFY          reduce using rule 15 (maincomando -> EXEC .)
    ADD             reduce using rule 15 (maincomando -> EXEC .)
    BACKUP          reduce using rule 15 (maincomando -> EXEC .)
    EXEC            reduce using rule 15 (maincomando -> EXEC .)
    $end            reduce using rule 15 (maincomando -> EXEC .)


state 15

    (2) lexico -> lexico comandos .

    CONFIGURE       reduce using rule 2 (lexico -> lexico comandos .)
    CREATE          reduce using rule 2 (lexico -> lexico comandos .)
    DELETE          reduce using rule 2 (lexico -> lexico comandos .)
    COPY            reduce using rule 2 (lexico -> lexico comandos .)
    TRANSFER        reduce using rule 2 (lexico -> lexico comandos .)
    RENAME          reduce using rule 2 (lexico -> lexico comandos .)
    MODIFY          reduce using rule 2 (lexico -> lexico comandos .)
    ADD             reduce using rule 2 (lexico -> lexico comandos .)
    BACKUP          reduce using rule 2 (lexico -> lexico comandos .)
    EXEC            reduce using rule 2 (lexico -> lexico comandos .)
    $end            reduce using rule 2 (lexico -> lexico comandos .)


state 16

    (4) comandos -> maincomando subcomando .
    (16) subcomando -> subcomando . sub
    (18) sub -> . TYPE tipo
    (19) sub -> . ENCRYPTLOG encriptado
    (20) sub -> . ENCRYPTREAD encriptado
    (21) sub -> . LLAVE STRING
    (22) sub -> . NAME name
    (23) sub -> . BODY STRING
    (24) sub -> . PATH RUTA
    (25) sub -> . FROM RUTA
    (26) sub -> . TO RUTA
    (27) sub -> . MODE tipo

    CONFIGURE       reduce using rule 4 (comandos -> maincomando subcomando .)
    CREATE          reduce using rule 4 (comandos -> maincomando subcomando .)
    DELETE          reduce using rule 4 (comandos -> maincomando subcomando .)
    COPY            reduce using rule 4 (comandos -> maincomando subcomando .)
    TRANSFER        reduce using rule 4 (comandos -> maincomando subcomando .)
    RENAME          reduce using rule 4 (comandos -> maincomando subcomando .)
    MODIFY          reduce using rule 4 (comandos -> maincomando subcomando .)
    ADD             reduce using rule 4 (comandos -> maincomando subcomando .)
    BACKUP          reduce using rule 4 (comandos -> maincomando subcomando .)
    EXEC            reduce using rule 4 (comandos -> maincomando subcomando .)
    $end            reduce using rule 4 (comandos -> maincomando subcomando .)
    TYPE            shift and go to state 18
    ENCRYPTLOG      shift and go to state 19
    ENCRYPTREAD     shift and go to state 20
    LLAVE           shift and go to state 21
    NAME            shift and go to state 22
    BODY            shift and go to state 23
    PATH            shift and go to state 24
    FROM            shift and go to state 25
    TO              shift and go to state 26
    MODE            shift and go to state 27

    sub                            shift and go to state 28

state 17

    (17) subcomando -> sub .

    TYPE            reduce using rule 17 (subcomando -> sub .)
    ENCRYPTLOG      reduce using rule 17 (subcomando -> sub .)
    ENCRYPTREAD     reduce using rule 17 (subcomando -> sub .)
    LLAVE           reduce using rule 17 (subcomando -> sub .)
    NAME            reduce using rule 17 (subcomando -> sub .)
    BODY            reduce using rule 17 (subcomando -> sub .)
    PATH            reduce using rule 17 (subcomando -> sub .)
    FROM            reduce using rule 17 (subcomando -> sub .)
    TO              reduce using rule 17 (subcomando -> sub .)
    MODE            reduce using rule 17 (subcomando -> sub .)
    CONFIGURE       reduce using rule 17 (subcomando -> sub .)
    CREATE          reduce using rule 17 (subcomando -> sub .)
    DELETE          reduce using rule 17 (subcomando -> sub .)
    COPY            reduce using rule 17 (subcomando -> sub .)
    TRANSFER        reduce using rule 17 (subcomando -> sub .)
    RENAME          reduce using rule 17 (subcomando -> sub .)
    MODIFY          reduce using rule 17 (subcomando -> sub .)
    ADD             reduce using rule 17 (subcomando -> sub .)
    BACKUP          reduce using rule 17 (subcomando -> sub .)
    EXEC            reduce using rule 17 (subcomando -> sub .)
    $end            reduce using rule 17 (subcomando -> sub .)


state 18

    (18) sub -> TYPE . tipo
    (28) tipo -> . LOCAL
    (29) tipo -> . CLOUD

    LOCAL           shift and go to state 30
    CLOUD           shift and go to state 31

    tipo                           shift and go to state 29

state 19

    (19) sub -> ENCRYPTLOG . encriptado
    (30) encriptado -> . TRUE
    (31) encriptado -> . FALSE

    TRUE            shift and go to state 33
    FALSE           shift and go to state 34

    encriptado                     shift and go to state 32

state 20

    (20) sub -> ENCRYPTREAD . encriptado
    (30) encriptado -> . TRUE
    (31) encriptado -> . FALSE

    TRUE            shift and go to state 33
    FALSE           shift and go to state 34

    encriptado                     shift and go to state 35

state 21

    (21) sub -> LLAVE . STRING

    STRING          shift and go to state 36


state 22

    (22) sub -> NAME . name
    (32) name -> . RUTA
    (33) name -> . STRING
    (34) name -> . ARCHIVO

    RUTA            shift and go to state 38
    STRING          shift and go to state 39
    ARCHIVO         shift and go to state 40

    name                           shift and go to state 37

state 23

    (23) sub -> BODY . STRING

    STRING          shift and go to state 41


state 24

    (24) sub -> PATH . RUTA

    RUTA            shift and go to state 42


state 25

    (25) sub -> FROM . RUTA

    RUTA            shift and go to state 43


state 26

    (26) sub -> TO . RUTA

    RUTA            shift and go to state 44


state 27

    (27) sub -> MODE . tipo
    (28) tipo -> . LOCAL
    (29) tipo -> . CLOUD

    LOCAL           shift and go to state 30
    CLOUD           shift and go to state 31

    tipo                           shift and go to state 45

state 28

    (16) subcomando -> subcomando sub .
